@@ -7,6 +7,8 @@ Version 0.7.1 UNRELASED
 
     * Convert std::auto_ptr (deprecated in C++11) to unique_ptr
 
+    * Remove unused function serialize_pattern_list()
+
 
 [2015-07-25]
 Version 0.7
